TESTENV: Justering av securityContext för att kunna testa av saved requests. Ful-loggning för att spåra prestandaproblem